--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<img class="fragment" data-duration="2" data-animate="fadeIn" src="img/ministry.png">
 			</section>
 			<section data-background="img/disaster.jpg"></section>
-			<section>
+			<section data-background="#191919">
 				<pre><code data-trim data-noescape class="cpp">
 // C
 struct XPositionSensorData
@@ -50,7 +50,7 @@ struct XPositionSensorData
 };
 						</code></pre>
 			</section>
-			<section>
+			<section data-background="#191919">
 				<pre><code data-trim data-noescape class="c">
 // C++
 class SensorData
@@ -67,7 +67,7 @@ class XPositionSensorData :
 						</code></pre>
 			</section>
 
-			<section>
+			<section data-background="#191919">
 				<pre><code data-trim data-noescape class="c">
 // C
 struct XPositionSensorData
@@ -79,7 +79,7 @@ struct XPositionSensorData
 sizeof(XPositionSensorData) == <span class="fragment" style="font-size: 2em">8</span>
 						</code></pre>
 			</section>
-			<section>
+			<section data-background="#191919">
 				<pre><code data-trim data-noescape class="c" style="text-align: center">
 [  1  ][  2  ][  3  ][  4  ]
 [            int           ]
@@ -88,7 +88,7 @@ sizeof(XPositionSensorData) == <span class="fragment" style="font-size: 2em">8</
 [    short   ][ int ]<span style="background-color: #842828">[  X  ]</span>
 						</code></pre>
 			</section>
-			<section>
+			<section data-background="#191919">
 				<pre><code data-trim data-noescape class="c">
 // C++
 class SensorData
@@ -105,7 +105,7 @@ class XPositionSensorData :
 						</code></pre>
 			</section>
 
-			<section>
+			<section data-background="#191919">
 				<pre><code data-trim data-noescape class="c" style="text-align: center">
 [  1  ][   2   ][  3   ][  4  ]
 [char ]<span style="background-color: #842828">[   X   ][  X   ][  X  ]</span>
@@ -119,7 +119,7 @@ class XPositionSensorData :
 
 						</code></pre>
 			</section>
-			<section>
+			<section data-background="#191919">
 				<pre><code data-trim data-noescape class="c">
 // C++
 class SensorData
@@ -136,15 +136,53 @@ class XPositionSensorData :
 sizeof(XPositionSensorData) == <span class="fragment" style="font-size: 2em">12</span>
 						</code></pre>
 			</section>
+			<section></section>
 			<section data-transition="none" data-background-transition="none" data-background="img/bg-neon.png">
 				<div class="neon">TECH IS HARD</div>
 			</section>
 			<section data-transition="none" data-background-transition="none"></section>
 		</section>
-		<section>title</section>
-		<section>wrike + Dart</section>
-		<section>about me</section>
-		<section>photo of old product</section>
+		<section>
+			<section data-background="img/title.png"></section>
+			<section>
+				<h3>Evgeny<span style="font-size: 1em; padding-left: 20px">🐈</span></h3>
+				<ul>
+					<li>Backend => Frontend => Management 🤔
+					<li>Director of Development 🇨🇿</li>
+					<li>Web, Dart and Flutter GDE <img src="img/experts-logo.png" style="vertical-align: middle; height: 1.3em;">
+					</li>
+				</ul>
+			</section>
+		</section>
+		<section>
+			<section data-background="img/wrike-old.png"></section>
+			<section data-background="img/wrike-new.png"></section>
+		</section>
+		<section>
+			<img src="img/wrike+dart.png" style="height: 150px;">
+		</section>
+		<section data-background="img/maslow/title.png"><h2 style="float: right">maslow pyramid</h2></section>
+		<section data-background="img/maslow/cut.png" data-background-transition="slide"></section>
+		<section>
+			<section data-background="img/maslow/1-tech.png"><h2 style="float: right; padding-right: 50px">I. Technical</h2></section>
+			<section>
+				<div class="center">
+					<p class="fragment news-paper"><img src="img/js_killer/js_killer_1.png"/></p>
+					<p class="fragment news-paper" style="position:absolute; transform: rotate(5deg)"><img src="img/js_killer/js_killer_2.png"/></p>
+					<p class="fragment news-paper" style="position:absolute; transform: rotate(-3deg)"><img src="img/js_killer/js_killer_3.png"/></p>
+					<p class="fragment news-paper" style="position:absolute; transform: rotate(3deg)"><img src="img/js_killer/js_killer_4.png"/></p>
+				</div>
+			</section>
+		</section>
+		<section>
+			<section data-background="img/maslow/2-scalability.png"><h2 style="float: right; padding-right: 50px">II. Scalability</h2></section>
+		</section>
+		<section>
+			<section data-background="img/maslow/3-support.png"><h2 style="float: right; padding-right: 50px">III. Support</h2></section>
+		</section>
+		<section>
+			<section data-background="img/maslow/4-other.png"><h2 style="float: right; padding-right: 50px">IV. Other</h2></section>
+		</section>
 		<section>tech limitations</section>
 		<section>maslow pyramide</section>
 		<section>story about dart</section>
@@ -181,7 +219,8 @@ sizeof(XPositionSensorData) == <span class="fragment" style="font-size: 2em">12<
 </div>
 
 <div id="credits">
-<!--	https://www.behance.net/gallery/55332529/NEONEON-FREE-FONT-->
+	american typewriter font
+	<!--	https://www.behance.net/gallery/55332529/NEONEON-FREE-FONT-->
 	<span>♥</span>
 </div>
 
