--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 			<section data-background="#FFFFFF">
 				<img class="fragment" data-duration="2" data-animate="fadeIn" src="img/ministry.png">
 			</section>
+			<section>
+				<h3>Evgeny<span style="font-size: 1em; padding-left: 20px">🐈</span></h3>
+				<ul>
+					<li><span class="fragment">Backend =></span> <span class="fragment">Frontend =></span> <span class="fragment">Management 🤔</span></li>
+					<li class="fragment">Director of Development 🇨🇿</li>
+					<li class="fragment">Web, Dart and Flutter GDE <img src="img/experts-logo.png" style="vertical-align: middle; height: 1.3em;">
+					</li>
+				</ul>
+			</section>
 			<section data-background="img/disaster.jpg"></section>
 			<section data-background="#191919">
 				<pre><code data-trim data-noescape class="cpp">
@@ -136,6 +145,9 @@ class XPositionSensorData :
 sizeof(XPositionSensorData) == <span class="fragment" style="font-size: 2em">12</span>
 						</code></pre>
 			</section>
+			<section data-background="img/atomic.jpg" data-transition="fade-in" data-transition-speed="slow">
+				<h1 data-animate="fadeIn" data-duration="5" data-delay="1" style="font-size: 6em; color: black">MEMORY OVERFLOW</h1>
+			</section>
 			<section data-background="#191919"></section>
 			<section data-transition="none" data-background-transition="none" data-background="#191919">
 				<div class="neon">TECH IS HARD</div>
@@ -144,15 +156,6 @@ sizeof(XPositionSensorData) == <span class="fragment" style="font-size: 2em">12<
 		</section>
 		<section>
 			<section data-background="img/title.png"></section>
-			<section>
-				<h3>Evgeny<span style="font-size: 1em; padding-left: 20px">🐈</span></h3>
-				<ul>
-					<li>Backend => Frontend => Management 🤔</li>
-					<li>Director of Development 🇨🇿</li>
-					<li>Web, Dart and Flutter GDE <img src="img/experts-logo.png" style="vertical-align: middle; height: 1.3em;">
-					</li>
-				</ul>
-			</section>
 		</section>
 		<section>
 			<section data-background="img/wrike-old.png"></section>
